# ethx

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
ethx-commons/: Cargo.toml
ethx-commons/src/: abi.rs  error.rs  ethereum.rs  lib.rs  opts.rs  signer.rs  tempo.rs  tx.rs  utils.rs  wallet_raw.rs
src/: call_encoder.rs  foundry_broadcast.rs  main.rs  multisend.rs  opts.rs  safe.rs  safe_api.rs
tests/: e2e_safe.rs
tests/fixtures/: safe_v141_creation_code.hex
