[package]
name = "ethx"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "ethx-commons"]

[dependencies]
alloy-chains = "0.2"
alloy-contract = "2.0.0"
alloy-network = "2.0.0"
alloy-primitives = "1.5.7"
alloy-provider = { version = "2.0.0", features = ["reqwest", "ws", "ipc"] }
alloy-rpc-types-eth = "2.0.0"
alloy-signer = "2.0.0"
alloy-sol-types = "1.5.7"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
eyre = "0.6"
ethx-commons = { path = "ethx-commons" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
alloy-node-bindings = "2.0.0"
alloy-signer-local = "2.0.0"
