[package]
name = "ethx-commons"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = "2.0.0-rc.0"
alloy-dyn-abi = "1.4.1"
alloy-network = "2.0.0-rc.0"
alloy-primitives = "1.5.7"
alloy-signer = { version = "2.0.0-rc.0", features = ["eip712"] }
alloy-signer-ledger = "2.0.0-rc.0"
alloy-signer-local = { version = "2.0.0-rc.0", features = ["mnemonic", "keystore"] }
alloy-signer-trezor = "2.0.0-rc.0"
alloy-sol-types = "1.5.7"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
eth-keystore = "0.5.0"
eyre = "0.6"
foundry-cli = { git = "https://github.com/foundry-rs/foundry", branch = "master" }
foundry-config = { git = "https://github.com/foundry-rs/foundry", branch = "master" }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
