[package]
name = "ethx-commons"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-chains = "0.2"
alloy-consensus = "2.0.0-rc.0"
alloy-dyn-abi = "1.4.1"
alloy-eips = "2.0.0-rc.0"
alloy-ens = { version = "2.0.0-rc.0", features = ["provider"] }
alloy-json-abi = "1.5.7"
alloy-network = "2.0.0-rc.0"
alloy-primitives = "1.5.7"
alloy-provider = { version = "2.0.0-rc.0", features = ["reqwest", "ws", "ipc"] }
alloy-rlp = "0.3"
alloy-signer = { version = "2.0.0-rc.0", features = ["eip712"] }
alloy-signer-ledger = { version = "2.0.0-rc.0", features = ["eip712"] }
alloy-signer-local = { version = "2.0.0-rc.0", features = ["mnemonic", "keystore"] }
alloy-signer-trezor = "2.0.0-rc.0"
alloy-sol-types = "1.5.7"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
eth-keystore = "0.5.0"
eyre = "0.6"
foundry-block-explorers = "0.22"
rpassword = "7"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
alloy-node-bindings = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
