[package]
name = "ethx-commons"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-chains = "0.2"
alloy-dyn-abi = "1.4.1"
alloy-eips = "2.0.0"
alloy-ens = { version = "2.0.0", features = ["provider"] }
alloy-json-abi = "1.5.7"
alloy-network = "2.0.0"
alloy-primitives = "1.5.7"
alloy-provider = { version = "2.0.0", features = ["reqwest", "ws", "ipc"] }
alloy-rlp = "0.3"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
eyre = "0.6"
foundry-block-explorers = "0.22"
foundry-wallets = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
alloy-node-bindings = "2.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
